Views Botlles how + Index

--- a/app/views/bottles/index.html.erb
+++ b/app/views/bottles/index.html.erb
@@ -6,3 +6,6 @@
     <p><%= bottle.description %></p>
   <% end %>
 
+<!-- quantité relative a la bouteille  -->
+<!-- pastille de si tout va bien ou pas  -->
+<!-- conseils globale de conservation  -->
