--- a/app/views/bottles/index.html.erb
+++ b/app/views/bottles/index.html.erb
@@ -1,11 +1,17 @@
 <h1> Les bouteilles de ma cave : </h1>
+  <%count = Hash.new(0)%>
   <% @bottles.each do |bottle| %>
     <h2><%= bottle.name %> - <%= bottle.vineyard %></h2>
-    <h5> <%= bottle.year %></h5>
-    <h6> <%= bottle.region.name %> - <%= bottle.grape.name %></h6>
+    <h3> <%= bottle.year %></h3>
+    <h3> <%= bottle.region.name %> - <%= bottle.grape.name %></h3>
     <p><%= bottle.description %></p>
+    <p><%= bottle.count =+ 1 %></p>
   <% end %>
 
-<!-- quantité relative a la bouteille  -->
+<!-- quantité relative a la bouteille  ok -->
 <!-- pastille de si tout va bien ou pas  -->
 <!-- conseils globale de conservation  -->
+
+  <!-- ajouter la température de chaque bouteille. 
+  créer moyenne de température. afficher conseil de conservation en créant des seuils. 
+  Potentiellement créer ces seuils en fonction du type de et afficher des informations spécifiques le type de vin concerné -->
