--- a/app/views/bottles/show.html.erb
+++ b/app/views/bottles/show.html.erb
@@ -1,13 +1,14 @@
 <h1> <%= @bottle.name %></h1>
   <%= @bottle.vineyard %></h2>
-    <h5> <%= @bottle.year %></h5>
-    <h6> <%= @bottle.region.name %> - <%= @bottle.grape.name %></h6>
+    <h2> <%= @bottle.year %></h2>
+    <h2> <%= @bottle.region.name %> - <%= @bottle.grape.name %></h2>
     <p><%= @bottle.description %></p>
-    <%= @bottle.preservation_advice %>
-    La bouteille sera à son appogée en : <%= @bottle.year + 10 %>
+    <p><%= @bottle.preservation_advice %></p>
+    <p><%= bottle.count%></p>
 
-<p>  </p>
+    <p><%La bouteille sera à son appogée en : <%= @bottle.year + 10 %></p>
 
-<!-- quantity par bouteilles/index -->
+
+<!-- quantity par bouteilles/index ok -->
 <!-- mettre possibilité update la quantiée  -->
 <!-- rajouter possibilité de mettre une photo  -->
