--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,15 @@
   <body>
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
+    
+    <%= form_tag bottles_path, method: :get do %>
+      <%= text_field_tag :query,
+        params[:query],
+        class: "form-control",
+        placeholder: "Rechercher un vin"
+      %>
+      <%= submit_tag "Rechercher", class: "" %>
+    <% end %>
 
     <%= yield %>
   </body>
