--- a/app/views/bottles/show.html.erb
+++ b/app/views/bottles/show.html.erb
@@ -1,14 +1,12 @@
-<h1> <%= @bottle.name %></h1>
-  <%= @bottle.vineyard %></h2>
-    <h2> <%= @bottle.year %></h2>
-    <h2> <%= @bottle.region.name %> - <%= @bottle.grape.name %></h2>
+<h1><%= @bottle.name %></h1>
+  <h2><%= @bottle.vineyard %></h2>
+    <h2><%= @bottle.year %></h2>
+    <h2><%= @bottle.region.name %> - <%= @bottle.grape.name %></h2>
     <p><%= @bottle.description %></p>
     <p><%= @bottle.preservation_advice %></p>
-    <p><%= bottle.count%></p>
+    <p><%= "La bouteille sera à son appogée en : #{@bottle.year + 10}" %></p>
+    <%= image_tag "https://images.vivino.com/thumbs/d45NbXIqTrOY7GyHkW7iyw_pb_x600.png", alt: "#{@bottle.name}" %>
 
-    <p><%La bouteille sera à son appogée en : <%= @bottle.year + 10 %></p>
 
+<!-- mettre possibilité update la quantitée  -->
 
-<!-- quantity par bouteilles/index ok -->
-<!-- mettre possibilité update la quantiée  -->
-<!-- rajouter possibilité de mettre une photo  -->
