--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
   </head>
 
   <body>
-    <%= render 'shared/navbar' %>
+    <%= render 'shared/top_logo' %>
+    <%= render 'shared/app_navbar' %>
     <%= render 'shared/flashes' %>
 
     <%= yield %>
