--- a/app/assets/stylesheets/components/_app_navbar.scss
+++ b/app/assets/stylesheets/components/_app_navbar.scss
@@ -12,7 +12,7 @@ nav {
     list-style: none;
     display: flex;
     justify-content: space-around;
-    border-top: 1px solid lightgrey;
+    // border-top: 1px solid lightgrey;
     li {
       flex: 1 1;
       padding: 1.2em 0;
