Interface accueil front V1

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,3 +34,14 @@ body {
     background-color: #e5e5e5;
   }
 }
+
+.hidden {
+  display: none;
+}
+
+#search-form {
+  width: 100%;
+  input {
+    padding: 1.5em;
+  }
+}
