--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,13 +16,13 @@
     <%= render 'shared/app_navbar' %>
     <%= render 'shared/flashes' %>
     
-    <%= form_tag bottles_path, method: :get do %>
-      <%= text_field_tag :query,
+    <%= form_tag bottles_path, method: :get, id: "search-form" do %>
+      <%= search_field_tag :query,
         params[:query],
         class: "form-control",
         placeholder: "Rechercher un vin"
       %>
-      <%= submit_tag "Rechercher", class: "" %>
+      <%= submit_tag "Rechercher", class: "hidden"%>
     <% end %>
 
     <%= yield %>
