--- a/app/views/shared/_app_navbar.html.erb
+++ b/app/views/shared/_app_navbar.html.erb
@@ -1,19 +1,19 @@
 <nav>
   <ul>
     <li>
-      <a href="#" class="nav-item"
+      <a href="/" class="nav-item"
         ><i class="fas fa-home"></i>
         Accueil
       </a>
     </li>
     <li>
-      <a href="#" class="nav-item"
+      <a href="#search" class="nav-item"
         ><i class="fas fa-search"></i>
         Rechercher
       </a>
     </li>
     <li>
-      <a href="#" class="nav-item">
+      <a href="<%=cellars_show_path%>" class="nav-item">
         <i class="fas fa-wine-bottle"></i>
         Ma cave
       </a>
