prefix the bug)

--- a/app/views/shared/_app_navbar.html.erb
+++ b/app/views/shared/_app_navbar.html.erb
@@ -7,8 +7,8 @@
       </a>
     </li>
     <li>
-      <a href="#search" class="nav-item"
-        ><i class="fas fa-search"></i>
+      <a id="search-caller" href="#search" class="nav-item">
+        <i class="fas fa-search"></i>
         Rechercher
       </a>
     </li>
