--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,10 +11,12 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "pages/cellar";
 
 body {
   background-color: $whitebg;
   overflow-x: hidden;
+  padding-bottom: 6em;
 }
 
 #top-logo {
