--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
 @import "components/index";
 @import "pages/index";
 @import "pages/cellar";
+@import "pages/search";
 
 body {
   background-color: $whitebg;
