--- a/app/views/bottles/index.html.erb
+++ b/app/views/bottles/index.html.erb
@@ -1,13 +1,23 @@
-<h1> Les bouteilles de ma cave : </h1>
+<section id="results">
 
-  <% @bottles.each do |bottle| %>
-    <h2><%= bottle.name %> - <%= bottle.vineyard %></h2>
-    <h3> <%= bottle.year %></h3>
-    <h3> <%= bottle.region.name %> - <%= bottle.grape.name %></h3>
-    <p><%= bottle.description %></p>
-    
-  <% end %>
+  <h1> Voici ce que nous avons... </h1>
 
+  <ul class="result-list">
+    <% @bottles.each do |bottle| %>
+      <a href="<%= bottle_path(bottle) %>">
+        <li>
+          <img src="" alt=" <%= bottle.name %> ">
+          <div class="bottle-info">
+            <h2><%= bottle.name %> - <%= bottle.vineyard %></h2>
+            <h3> <%= bottle.year %></h3>
+            <h3> <%= bottle.region.name %> - <%= bottle.grape.name %></h3>
+          </div>
+        <li>
+      </a>
+    <% end %>
+  </ul>
+
+</section>
 <!-- pastille de si tout va bien ou pas  -->
 <!-- conseils global de conservation  -->
 
