--- a/app/assets/stylesheets/components/_bottle_view.scss
+++ b/app/assets/stylesheets/components/_bottle_view.scss
@@ -12,3 +12,22 @@
   display: flex;
   text-align: center;
 }
+
+.scroller {
+  width: 365px;
+  height: 667px;
+  overflow-y: scroll;
+  scrollbar-color: rebeccapurple green;
+  scrollbar-width: thin;
+}
+
+.button {
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #FF7F11;
+  text-align: center;
+  color: white;
+  border-radius: 3%;
+  width: 15px;
+  height: 15px;
+}
