--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <section class="banner">
   <h1>Redécouvrez la gestion de votre cave.</h1>
-  <a href="#">S'inscrire</a>
+  <a href="<%= new_user_registration_path %>">S'inscrire</a>
 </section>
