--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
+    <%#= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   </head>
 
   <body>
@@ -17,7 +17,7 @@
     </section>
     <%= render 'shared/app_navbar' %>
     <%= render 'shared/flashes' %>
-    
+
     <%= form_tag bottles_path, method: :get, id: "search-form" do %>
       <%= search_field_tag :query,
         params[:query],
