ajout flèche retour

--- a/app/assets/stylesheets/components/_bottle_view.scss
+++ b/app/assets/stylesheets/components/_bottle_view.scss
@@ -48,7 +48,6 @@
 .fas-arrow-left {
       color: white;
       text-decoration: none;
+      size: 3x;
   }
-  .fas-arrow-left:hover{
-    background: #FF7F11;
-  }
+ 
