--- a/app/views/bottles/show.html.erb
+++ b/app/views/bottles/show.html.erb
@@ -1,5 +1,5 @@
 
-		<a class="fas fa-arrow-left"></a>
+		<a class="fas fa-arrow-left" href="/"></a>
 		<div class="informations">
 			<h1><%= @bottle.name %></h1>
 		</div>
