--- a/app/assets/stylesheets/pages/_search.scss
+++ b/app/assets/stylesheets/pages/_search.scss
@@ -4,26 +4,59 @@
   .result-list {
     list-style: none;
     padding: 2em 0;
+
+    & li:last-child {
+        border-bottom: none;
+    }
     a {
       color: black;
       text-decoration: none;
     }
     li {
+      position: relative;
       display: flex;
       align-items: center;
       border-bottom: 1px solid lightgray;
-      padding: 1em 0;
+      padding: 1em 2em 1em 0;
+      
+      .bottle-show{
+        display: flex;
+        align-items: center;
+      }
       img {
         width: 30%;
+        margin-left: -1em;
       }
       .bottle-info {
         flex: 1 1;
+        align-items: center;
         h2 {
-          font-size: 1.5em !important;
+          font-size: 1.3em !important;
+          font-weight: bold;
         }
         h3 {
-          font-size: 1.2em !important;
+          font-size: 1em !important;
         }
+        .grape{
+          font-style: italic;
+          margin: 0;
+        }
+      }
+      .add{
+        position: absolute;
+        right:0;
+        top: 50%;
+        transform: translate(0%,-50%);
+        background-color: $prim;
+        color: white;
+        padding: 0.5em 0.5em;
+        border-radius: 50%;
+        width: 2em;
+        height: 2em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bold;
       }
     }
   }
