--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,11 +32,16 @@ body {
   img {
     width: 50%;
   }
-  .user {
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    background-color: #e5e5e5;
+  .login-btn {
+    padding: 1em;
+    background-color: $prim;
+    font-weight: bold;
+    color: #fff;
+    border-radius: 4px;
+  }
+  .setting-btn {
+    color: $text-common;
+    font-size: 1.5em;
   }
 }
 
