--- a/app/views/cellars/show.html.erb
+++ b/app/views/cellars/show.html.erb
@@ -22,7 +22,12 @@
     <% colors << wine_colors[score] %>
   <% end %>
 
-  <%= pie_chart data, colors: colors %>
+  <% if data.present? %>
+    <%= pie_chart data, colors: colors %>
+  <% else %> 
+    <img src="https://lottiefiles.com/iframe/37267-swirling-wine”" alt="">
+  <% end %>
+  
 
   <div class="cellar-overview">
     <div class="cellar-img">
