--- a/app/assets/stylesheets/pages/_search.scss
+++ b/app/assets/stylesheets/pages/_search.scss
@@ -57,6 +57,7 @@
         justify-content: center;
         align-items: center;
         font-weight: bold;
+        line-height: 1em;
       }
     }
   }
