--- a/app/assets/stylesheets/components/_bottle_view.scss
+++ b/app/assets/stylesheets/components/_bottle_view.scss
@@ -1,58 +1,56 @@
-.image-show-bottle {
-	width: 200px;
-  margin-left: auto;
-  margin-right: auto;
-  
-  img{
-    width: 100%;
-    
-  }
-}
+// .image-show-bottle {
+// 	width: 200px;
+//   margin-left: auto;
+//   margin-right: auto;
 
-.informations-bottle {
- 
-  text-align: center;
-  
+//   img{
+//     width: 100%;
 
-  h1{
-    font-weight: bold;
-  }
-  h2 {
-  font-size: 1.6em;
-  }
-  h3 {
-    padding: 4px;
-    font-size: 20px;
-    font-weight: bold;
-  }
-  p{
-    padding: 2px;
-  }
-}
+//   }
+// }
 
+// .informations-bottle {
 
-.button {
-  background-color: #FF7F11;
-  text-align: center;
-  color: white;
-  border-radius: 3%;
-  padding: 8px 24px;
-  transition: background 0.3s ease;
-  margin: 20px;
-  display: inline-block;
-}
+//   text-align: center;
 
-.button:hover {
-  background: #39393A;
-  color: white;
-}
+//   h1{
+//     font-weight: bold;
+//   }
+//   h2 {
+//   font-size: 1.6em;
+//   }
+//   h3 {
+//     padding: 4px;
+//     font-size: 20px;
+//     font-weight: bold;
+//   }
+//   p{
+//     padding: 2px;
+//   }
+// }
 
-.return-button {
-    color: #FF7F11;
-    transition: color 0.3s ease;
-    align-items: flex-start;
-}
+// .button {
+//   background-color: #FF7F11;
+//   text-align: center;
+//   color: white;
+//   border-radius: 3%;
+//   padding: 8px 24px;
+//   transition: background 0.3s ease;
+//   margin: 20px;
+//   display: inline-block;
+// }
 
-.return-button:hover {
-  color: #39393A;
-}
+// .button:hover {
+//   background: #39393A;
+//   color: white;
+// }
+
+// .return-button {
+//     color: #FF7F11;
+//     transition: color 0.3s ease;
+//     align-items: flex-start;
+// }
+
+// .return-button:hover {
+//   color: #39393A;
+// }
