--- a/app/views/bottles/show.html.erb
+++ b/app/views/bottles/show.html.erb
@@ -28,16 +28,10 @@
 			<h3>Région : <%= @bottle.region.name %> - Cépages : <%= @bottle.grape.name %></h3>
 		</div>
 
-		<% if user_signed_in? %>
-			<% if @in_cave.include? @bottle %>
-				<%= bottle_quantity = @stock.where('bottle_id = ?', params[:id]).first.quantity %>
-			<% else %>
-				<% bottle_quantity = 0 %>
-			<% end %>
-			
-			<%= simple_form_for [@bottle, Stock.new] do |f| %>
-					<%= f.input :quantity, input_html: { value: "#{bottle_quantity}" } %>
-          <%= f.button :submit, as: "hidden" %>
+		<% if user_signed_in? && @stock.present? %>
+			<%= simple_form_for [@bottle, Stock.new], url: bottle_stock_path(@bottle, @stock.id), method: :patch do |f| %>
+					<%= f.input :quantity, input_html: { value: "#{@stock.quantity}" } %>
+          <%= f.button :submit, value: "Update stock" %>
       <% end %>
 		<% end %>
 
