recuperer le code

--- a/app/views/bottles/show.html.erb
+++ b/app/views/bottles/show.html.erb
@@ -21,7 +21,7 @@
 			<p><%= @bottle.description %></p>
 		</div>
 		<div class="informations-bottle">
-			<p><%= "La bouteille sera à son appogée en : #{@bottle.year + 10}" %></p>
+			<p><%= "La bouteille sera à son appogée en : #{@bottle.peak_year}" %></p>
 			<p>Température idéale pour la conservation: <br><%= @bottle.preservation_advice %></p>
 		</div>
 		<div class="informations-bottle">
