--- a/app/views/bottles/show.html.erb
+++ b/app/views/bottles/show.html.erb
@@ -28,9 +28,9 @@
 			<h3>Région : <%= @bottle.region.name %> - Cépages : <%= @bottle.grape.name %></h3>
 		</div>
 
-		<% if user_signed_in? && @stock.present? %>
-			<%= simple_form_for [@bottle, Stock.new], url: bottle_stock_path(@bottle, @stock.id), method: :patch do |f| %>
-					<%= f.input :quantity, input_html: { value: "#{@stock.quantity}" } %>
+		<% if user_signed_in? %>
+			<%= simple_form_for [@bottle, @stock], url: bottle_stock_path(@bottle, @stock.id), method: :patch do |f| %>
+					<%= f.input :quantity, input_html: { value: "#{@stock.quantity}", min: 0 } %>
           <%= f.button :submit, value: "Update stock" %>
       <% end %>
 		<% end %>
