--- a/app/assets/stylesheets/pages/_bottle_show.scss
+++ b/app/assets/stylesheets/pages/_bottle_show.scss
@@ -1,36 +1,80 @@
 .bottle-show {
-  padding: 1em;
   position: relative;
   .image-show-bottle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
+    height: 55vh;
     text-align: center;
+    padding-bottom: 3em;
     img {
       width: 80%;
       z-index: 50;
-      filter: drop-shadow(0px 9px 28px rgba(84, 170, 255, 0.21));
+      filter: drop-shadow(0px 9px 28px rgba(10, 10, 10, 0.21));
     }
   }
   .year-overview {
     position: absolute;
     font-size: 7em;
     opacity: 0.2;
-    color: #ff9000;
+    color: $whitebg;
     max-width: 100%;
     /* top: 50%; */
     text-align: center;
-    transform: translate(-50%, 50%);
+    transform: translate(-50%, 13%);
     left: 50%;
-    z-index: -1;
+    z-index: 0;
+  }
+  .bottle-info {
+    padding: 1.5em;
+    margin-top: -3em;
+    background-color: $whitebg;
+    .bottle-title {
+      h2 {
+        font-size: 1.3em;
+        font-style: italic;
+      }
+    }
+  }
+  .bottle-spec {
+    padding: 1em 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 0.9em;
+    .sub-spec {
+      flex: 1 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      p {
+        margin: 0.5em 0;
+        font-weight: 100;
+      }
+      span {
+        opacity: 0.6;
+        font-weight: s;
+      }
+    }
   }
 }
 
 .cave-control {
   width: 100%;
+  background-color: red;
   .form-controls {
     display: flex;
     align-items: center;
-    width: 60%;
+    width: 100%;
     margin: auto;
+    position: fixed;
+    bottom: 36px;
+    background-color: $whitebg;
+    transition: 0.2s all ease;
+    &.visible-btn {
+      bottom: 87px !important;
+    }
     .form-group {
       margin: 0;
     }
@@ -38,18 +82,40 @@
       display: none;
     }
     input {
-      width: 60px;
+      flex-grow: 1;
+      height: 50px;
       text-align: center;
+      border-top-color: 1px solid $prim;
     }
-    #btn-show-submit {
-      display: none;
-    }
-    button {
+    .btn-submit {
+      width: 100%;
+      display: inline-block;
       background-color: $prim;
-      border: none;
-      color: #fff;
-      padding: 0 1em;
+      color: $whitebg;
+      font-weight: bold;
+    }
+    [id^="btn-select-"] {
+      background-color: $whitebg;
+      border: 1px solid $prim;
+      color: $prim;
+      padding: 0 1.6em;
       font-size: 1.5em;
     }
   }
+}
+
+.winebg-red {
+  background-color: #e56b6f;
+}
+
+.winebg-white {
+  background-color: #fcf6bd;
+}
+
+.winebg-pink {
+  background-color: #f5cac3;
+}
+
+.winebg-champ {
+  background-color: #ffd6ba;
 }
