Ordre affichage stock + fix alertes

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -13,5 +13,6 @@ $light-gray: #f4f4f4;
 
 $whitebg: #f6f9fc;
 $prim: #ff9000;
-$lightgreen: #d9ffcb;
+$lightgreen: #A0E8AF;
+$lightorange: #FFD365;
 $text-common: #39393b;
