--- a/app/assets/stylesheets/pages/_cellar.scss
+++ b/app/assets/stylesheets/pages/_cellar.scss
@@ -2,10 +2,24 @@
   h1 {
     font-weight: bold;
   }
-  .cellar-alert {
+  .cellar-alert-warning {
     position: sticky;
     top: 5.6em;
-    margin-bottom: 1em;
+    margin-bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.5em 0;
+    background-color: $lightorange;
+    p {
+      margin: 0;
+      margin-right: 1em;
+    }
+  }
+  .cellar-alert-ok {
+    position: sticky;
+    top: 5.6em;
+    margin-bottom: 0;
     display: flex;
     justify-content: center;
     align-items: center;
