--- a/app/views/bottles/show.html.erb
+++ b/app/views/bottles/show.html.erb
@@ -28,6 +28,15 @@
 			<h3>Région : <%= @bottle.region.name %> - Cépages : <%= @bottle.grape.name %></h3>
 		</div>
 
+		<div class="informations-bottle">
+			<h3>Mets: 
+				<% @bottle.foods.each do |food| %>
+					<%= food.name %>
+				<% end %>
+			</h3>
+			
+		</div>
+
 		<% if user_signed_in? %>
 			<%= simple_form_for [@bottle, @stock], url: bottle_stock_path(@bottle, @stock.id), method: :patch do |f| %>
 					<%= f.input :quantity, input_html: { value: "#{@stock.quantity}", min: 0 } %>
