--- a/app/views/cellars/show.html.erb
+++ b/app/views/cellars/show.html.erb
@@ -5,9 +5,9 @@
 
   <% if peak_year_ready %>
     <% peak_year_ready.each do |bottle| %>
-      <div class="cellar-alert">
-        <p> A déguster : <%= link_to "#{bottle.name}, #{bottle.year}", bottle_path(bottle) %> </p>
+      <div class="cellar-alert-ok">
         <i class="fas fa-check-circle"></i>
+        <p>A déguster : <%= link_to "#{bottle.name}, #{bottle.year}", bottle_path(bottle) %></p>
       </div>
     <% end %>
   <% end %> 
@@ -15,9 +15,9 @@
   <% if peak_year_late %>
     <% peak_year_late.each do |bottle| %>
       <% if bottle.year != 0 %>
-        <div class="cellar-alert">
-          <p> Apogée dépassée : <%= link_to "#{bottle.name}, #{bottle.year}", bottle_path(bottle)%> </p>
-          <i class="fas fa-check-circle"></i>
+        <div class="cellar-alert-warning">
+          <i class="fas fa-exclamation-circle"></i>
+          <p>Apogée dépassée : <%= link_to "#{bottle.name}, #{bottle.year}", bottle_path(bottle)%></p>
         </div>
       <% end %>
     <% end %>
@@ -86,7 +86,7 @@
             <span><%= stock.bottle.year if stock.bottle.year > 0 %></span>
             <p class="grape"><%= stock.bottle.grape.name %></p>
             <span><i class="fas fa-wine-bottle"></i> <%= stock.quantity %></span>
-            <span> <%= link_to 'S', bottle_stock_path(stock.bottle, stock), method: :delete, data: {confirm: "Voulez vous vraiment supprimer #{stock.quantity} #{stock.bottle.name.strip}"} %> </span>
+            <span> <%= link_to 'S', bottle_stock_path(stock.bottle, stock), method: :delete, data: {confirm: "Voulez vous vraiment supprimer #{stock.quantity} bouteille#{"s" if stock.quantity > 1} de #{stock.bottle.name.strip} ?"} %> </span>
           </div>
           <div class="apogee-indicator"></div>
         </li>
