--- a/app/views/bottles/show.html.erb
+++ b/app/views/bottles/show.html.erb
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div class="spec-bottle">
-        <p>Température idéale pour la conservation: <br><%= @bottle.preservation_advice %></p>
+        <p>Température : <br><%= @bottle.preservation_advice %></p>
       </div>
       <div class="spec-bottle">
         <p>Région : <%= @bottle.region.name %></p>
