--- a/app/views/cellars/show.html.erb
+++ b/app/views/cellars/show.html.erb
@@ -49,13 +49,16 @@
 
   <div class="cellar-overview">
     <div class="cellar-img">
-    <% @cellar.bottles.last(3).each do |bottle|%>
-      <img
-        src="<%= bottle.image %>"
-        alt="<%= bottle.name.strip %>"
-      />
-    <% end %>
+    <% if @cellar.bottles.count > 1 %>
+        <% @cellar.bottles.last(3).each do |bottle|%>
+        <img
+          src="<%= bottle.image %>"
+          alt="<%= bottle.name.strip %>"
+        />
+      <% end %>
     </div>
+    <% end %>
+
   </div>
   <ul class="cellar-list">
     <div class="cellar-info">
